# grpc-stubs

./: .gitignore  README.md  README.rst  dev-requirements.txt  requirements-dev-py36.txt  requirements-dev.txt  setup.cfg  setup.py  tools.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml
grpc-stubs/: __init__.pyi  aio.pyi
grpc-stubs/aio/: __init__.pyi  _base_call.pyi  _base_channel.pyi  _base_server.pyi  _call.pyi  _channel.pyi  _interceptor.pyi  _metadata.pyi  _server.pyi  _typing.pyi
grpc_health-stubs/v1/: health.pyi  health_pb2.pyi  health_pb2_grpc.pyi
grpc_reflection-stubs/v1alpha/: reflection.pyi
grpc_status-stubs/: __init__.pyi  rpc_status.pyi
typesafety/: test_grpc.yml
