[metadata]
name = grpc-stubs
version = 1.22
description = MyPy stubs for grpcio
long_description = file: README.rst
license = MIT
url = https://github.com/shabbyrobe/grpc-stubs
author = Blake Williams
author_email = code@shabbyrobe.org
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development

[options]
packages =
    grpc

[options.package_data]
coincurve =
    py.typed
    grpc.pyi
